fix hyphens and overflow wrap

--- a/css/content.css
+++ b/css/content.css
@@ -31,16 +31,22 @@ h1 {
   font-weight: bold;
   margin: 5px 0px;
   text-align: center;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 h2 {
   font-size: 2.5rem;
   font-weight: bold;
   margin: 25px 0px;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 h3 {
   font-size: 2rem;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 h4 {
@@ -50,6 +56,8 @@ h4 {
 p, div {
   font-size: 1.4rem;
   font-weight: bold;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 a {
